--- a/day01/index.html
+++ b/day01/index.html
@@ -7,6 +7,25 @@
 </head>
 <body>
     <h1>Hello Day01 Page</h1>
+
+    <input id="input-name" />
+    <button id="btn-test"> 테스트 </button>
+
+
+    <script>
+        console.log("hello")
+        console.log("202258028")
+        console.log("정인지")
+
+        var btnTest = document.getElementById("btn-test")
+        var inputName = document.getElementById("input-name")
+
+        btnTest.addEventListner('click',()=> {
+            //클릭하면 실행
+            console.log(" " + inputName.value + "님")
+        })
+
+    </script>
     
 </body>
 </html>
