--- a/day01/index.html
+++ b/day01/index.html
@@ -20,7 +20,7 @@
         var btnTest = document.getElementById("btn-test")
         var inputName = document.getElementById("input-name")
 
-        btnTest.addEventListner('click',()=> {
+        btnTest.addEventListener('click',()=> {
             //클릭하면 실행
             console.log(" " + inputName.value + "님")
         })
