--- a/lecture/day03/ex01.html
+++ b/lecture/day03/ex01.html
@@ -14,7 +14,7 @@
     </div>
 
     <script>
-        var inpNum1 = document.getElementById("inp-numl")
+        var inpNum1 = document.getElementById("inp-num1")
         var inpNum2 = document.getElementById("inp-num2")
         var inpOut = document.getElementById("inp-out")
         var btnPlus = document.getElementById("btn-plus")
