--- a/lecture/day02/ex01.html
+++ b/lecture/day02/ex01.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>Counter Example</title>
 </head>
 <body>
-    <h1 id="counter-output" >counter : 0</h1>
-    <button id="btn-inc" > Inc </button>
-    <button id="btn-dec" > Dec </button>
+    <h1 id="counter-output">counter = 0</h1>
+    <button id="btn-inc">Inc</button>
+    <button id="btn-dec">Dec</button>
 
     <script>
-        var counteroutput = document.getElementById("counter-output")
+        var counterOutput = document.getElementById("counter-output");
         var btnInc = document.getElementById("btn-inc");
-        var counter = 0 //변수 선언앞에는 var을 사용해줌
-        var btnDec = document.getElementById("btn-dec")
+        var btnDec = document.getElementById("btn-dec");
+        var counter = 0;
 
-        btnInc.addEventListener('click',()=> {
-            console.log('click test' + counter)
-            counter = counter + 1 //오른쪽에 있는 걸 왼쪽에 넣어라(대입연산자)
-            counteroutput.innerText = "counter : " + counter
+        btnInc.addEventListener('click', () => {
+            console.log('click test +', counter);
+            counter = counter + 1;
+            counterOutput.innerText = "counter = " + counter;
+        });
 
-        })
-
-        btnDec.addEventListener('click',()=> {
-            console.log('click test' + counter)
-            counter = counter - 1 //오른쪽에 있는 걸 왼쪽에 넣어라(대입연산자)
-            counteroutput.innerText = "counter : " + counter
-
-        })
-
-
-
+        btnDec.addEventListener('click', () => {
+            console.log('click test -', counter);
+            counter = counter - 1;
+            counterOutput.innerText = "counter = " + counter;
+        });
     </script>
-    
 </body>
 </html>
