--- a/final/index.html
+++ b/final/index.html
@@ -245,7 +245,7 @@
           <h3>아케인</h3> 
         </div>
         <div class="anime-card" data-title="사이버펑크" data-year="2022" data-desc="어머니를 잃은 소년 데이비드가 우연히 만난 루시에게 이끌려 엣지러너라는 길거리 무법자 용병의 삶을 시작하게 되면서 벌어지는 이야기"> 
-          <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA4MTFfNDMg%2FMDAxNjkxNzQyNDM4MDIw.pourBJnmM58zQ70STwr6G2C6wBFZpxFj2EwIdMxUnWMg._V0Syld-gvv7tNGNfxGMsl5hQhl6sZKAdMcuvbuS9bUg.JPEG.xyvrbq30133%2FIMG_9620.jpg&type=sc960_832" alt="사이버펑크: 엣지러너"> 
+          <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA4MTFfNDMg%2FMDAxNjkxNzQyNDM4MDIw.pourBJnmM58zQ70STwr6G2C6wBFZpxFj2EwIdMxUnWMg._V0Syld-gvv7tNGNfxGMsl5hQhl6sZKAdMcuvbuS9bUg.JPEG.xyvrbq30133%2FIMG_9620.jpg&type=sc960_832" alt="사이버펑크> 
           <h3>사이버펑크</h3> 
         </div>
         <div class="anime-card" data-title="블루록" data-year="2022" data-desc="세계 최고의 스트라이커를 만들기 위해 고교 축구 선수들이 한데모여 경쟁하는 이야기"> 
