--- a/final/intro.html
+++ b/final/intro.html
@@ -14,10 +14,10 @@
   }
 
   video {
-    width: 80%;       /* 적당한 크기 */
-    max-width: 900px; /* 너무 큰 화면 방지 */
-    border-radius: 12px;
-  }
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;  /* 화면을 꽉 채우도록 확대 */
+}
 </style>
 </head>
 
