--- a/final/index.html
+++ b/final/index.html
@@ -316,7 +316,7 @@
 
 
   <footer>
-    <p>© 2025 Anime Archive</p>
+    <p>© 2025 Web programming AniLover♡</p>
   </footer>
 
   <script src="script.js"></script>
