--- a/final/scenes.html
+++ b/final/scenes.html
@@ -115,6 +115,7 @@
 /* 명장면 이미지 목록 (원하면 여기 계속 추가 가능) */
 const sceneImages = [
   { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2F20160125_103%2Fkja050102_1453697385608F8b2M_GIF%2F20160125134119.gif&type=sc960_832_gif"},
+  { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2F20160125_103%2Fkja050102_1453697385608F8b2M_GIF%2F20160125134119.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi3.ruliweb.com%2Fori%2F23%2F02%2F05%2F18620598d6f525908.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTAxMjBfMjIx%2FMDAxNzM3MzYyMzU0NTg2.FDrd8p8XoYLtrOzlP211M7ZRoouAs2UrQ76G7UR3Idwg.6kHSsLOz78xzXo2R6rvNHZ3XShUyjDZqejjrNo82TSgg.GIF%2F147560.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTA3MDRfMTgx%2FMDAxNzUxNTk1NjI0Mzc1.6fMXxpC0BRg2hM4zdvSa9o8XtxhY4m8CohDlRfRwRYkg.sSexd3U3_fpt-I00BaDIcZaqg_rUyXRcdcvu7uiw3M0g.GIF%2FGIF_2025-07-04_%25BF%25C0%25C0%25FC_10-44-12.gif&type=sc960_832_gif"},
