--- a/final/scenes.html
+++ b/final/scenes.html
@@ -99,7 +99,7 @@
 <body>
 
 <a href="index.html" class="back-btn">← 메인으로 </a>
-<h1>사진관</h1>
+<h1>미리보기</h1>
 
 <div class="scene-grid" id="scene-container">
   <!-- 여기에 이미지 자동 삽입됨 -->
