--- a/final/scenes.html
+++ b/final/scenes.html
@@ -114,7 +114,7 @@
 <script>
 /* 명장면 이미지 목록 (원하면 여기 계속 추가 가능) */
 const sceneImages = [
-  { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2F20160125_103%2Fkja050102_1453697385608F8b2M_GIF%2F20160125134119.gif&type=sc960_832_gif"},
+  { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTEwMDRfNjcg%2FMDAxNzU5NTg4NDE4NjA0.EOY8wHYLWCWLCqXLNfLTmxkCaIA9xLW-hNe6N18ZHj0g.jsDKWZ3TLvM-5s6_D7SJ5DXFvPCYr9zByB0ZOysPm8wg.GIF%2F2025-10-04232213-ezgif.com-video-to-gif-converter.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2F20160125_103%2Fkja050102_1453697385608F8b2M_GIF%2F20160125134119.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi3.ruliweb.com%2Fori%2F23%2F02%2F05%2F18620598d6f525908.gif&type=sc960_832_gif"},
   { src: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTAxMjBfMjIx%2FMDAxNzM3MzYyMzU0NTg2.FDrd8p8XoYLtrOzlP211M7ZRoouAs2UrQ76G7UR3Idwg.6kHSsLOz78xzXo2R6rvNHZ3XShUyjDZqejjrNo82TSgg.GIF%2F147560.gif&type=sc960_832_gif"},
