--- a/final/scenes.html
+++ b/final/scenes.html
@@ -80,10 +80,12 @@
   }
 
   .img-modal-content {
-    max-width: 90%;
-    max-height: 85%;
-    border-radius: 15px;
-  }
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 
   .img-close {
     position: absolute;
